# devconnect-hackathon-2025

./: .gitignore  ReadMe.md
demand_forecasting/backup/webapp/: app.py
demand_forecasting/backup/webapp/assets/: footer.py  history_pd.parquet  history_pd_v2.parquet  make_prediction.py  mystyle.css  navbar.py
demand_forecasting/backup/webapp/pages/: home.py
demand_forecasting/hackathon_resources/: Hackathon: Time Series Forecasting.py
esg/app/: .gitignore  app.py  pyproject.toml  requirements.txt
esg/backup/: extract_text_from_pdf (udf).py
esg/backup/dashboard/: metric_view.yaml
esg/backup/pipelines/: ESG Emissions ETL - mart.sql  ESG Emissions ETL - partners.ipynb  ESG Emissions ETL - partners.sql  ESG Emissions ETL - public companies.ipynb  ESG Emissions ETL - public companies.sql
esg/hackathon_resources/: Hackathon: ESG PDF loading.py  extract_text_from_pdf (udf)
hackaton/: ESG_Hackathon_80_20_Strategy.md  ESG_Intelligence_Platform_Guide.md
provision-users-tf/: README.md  main.tf  outputs.tf  secrets.tfvars.example  terraform.tfvars  terraform.tfvars.example  users.csv  variables.tf
